<resources>
    <string name="app_name">Alquiler Vehiculos</string>
    <string name="menu_name">CREAR USUARIO</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_alquiler">Coches en Alquiler</string>
    <string name="menu_combustible">Combustible</string>
    <string name="menu_tools">Configuración</string>
    <string name="menu_csesion">Cerrar Sesión</string>
    <string name="menu_cuenta">Mi Cuenta</string>
    <string name="menu_anunciar">Publicar un Anuncio</string>
    <string name="title_activity_principal">principal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_organizacion_fragment">organizacionFragment</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
</resources>
