<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/casa"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_alquiler"
                android:icon="@drawable/coche"
                android:title="@string/menu_alquiler"/>
        <item
                android:id="@+id/nav_combustible"
                android:icon="@drawable/gasolinera"
                android:title="@string/menu_combustible"/>
        <item
                android:id="@+id/nav_anunciar"
                android:icon="@drawable/editar"
                android:title="@string/menu_anunciar"/>
    </group>

    <item android:title="Cuenta">
        <menu>
            <item
                    android:id="@+id/nav_cuenta"
                    android:icon="@drawable/usuario"
                    android:title="@string/menu_cuenta"/>
            <item
                    android:id="@+id/nav_tools"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_tools"/>
            <item
                    android:id="@+id/nav_cerrar_sesion"
                    android:icon="@drawable/cerrar_sesion"
                    android:title="@string/menu_csesion"/>
        </menu>
    </item>

</menu>
